# infrastructure/src/main/java/co/edu/uniquindio/triage/infrastructure/adapter/in/rest/dto/auth/RegisterRequest.java
@@ -9,7 +9,8 @@ public record RegisterRequest(
         @NotBlank @Size(min = 3, max = 50) String username,
         @NotBlank @Email @Size(max = 255) String email,
         @NotBlank @Size(min = 8) String password,
-        @NotBlank @Size(max = 150) String fullName,
+        @NotBlank @Size(max = 75) String firstName,
+        @NotBlank @Size(max = 75) String lastName,
         @NotBlank @Size(max = 20) String identification,
         Role role
 ) {
